--- a/biblio.bib
+++ b/biblio.bib
@@ -7,6 +7,67 @@
 % NOTA: citare il DOI non è obbligatorio ma MOLTO desiderabile
 
 % esempio citazione articolo a congresso
+@inproceedings{costeffective,
+  author={Packer,T. L. and Embley,D. W.},
+  title = {Cost effective ontology population with data from lists in ocred historical documents},
+  booktitle = {Proceedings of the 2nd International Workshop on Historical Document Imaging and Processing},
+  year = {2013},
+  pages = {44--52},
+  doi ={10.1145/2501115.2501132}
+}
+
+@inproceedings{ImprovingNE,
+  title={Improving Named Entity Recognition using Deep Learning with Human in the Loop},
+  author={T. L. C. D. Silva and Regis Pires Magalh{\~a}es and J. Mac{\^e}do and David Ara{\'u}jo and Natanael Ara{\'u}jo and Vinicius de Melo and Pedro Ol{\'i}mpio and P. Rego and A. V. L. Neto},
+  booktitle={EDBT},
+  year={2019}
+}
+
+@inproceedings{regexEngines,
+author = {Davis, James},
+year = {2019},
+month = {08},
+pages = {1256-1258},
+title = {Rethinking Regex engines to address ReDoS},
+isbn = {978-1-4503-5572-8},
+doi = {10.1145/3338906.3342509}
+}
+
+% esempio citazione pagina web di un progetto
+@misc{nowTwoProblems,
+  author={{IQAndreas}},
+  note={\url{https://softwareengineering.stackexchange.com/questions/223634/what-is-meant-by-now-you-have-two-problems}}
+}
+
+@inproceedings{HowToInvestMyTime,
+author = {Zhang, Shanshan and He, Lihong and Dragut, Eduard and Vucetic, Slobodan},
+title = {How to Invest My Time: Lessons from Human-in-the-Loop Entity Extraction},
+year = {2019},
+isbn = {9781450362016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3292500.3330773},
+doi = {10.1145/3292500.3330773},
+pages = {2305?2313},
+numpages = {9},
+keywords = {neural networks, human-in-the-loop, entity extraction, regex},
+location = {Anchorage, AK, USA},
+series = {KDD '19}
+}
+
+@INPROCEEDINGS{RegexesAreHard,
+  author={Michael, Louis G. and Donohue, James and Davis, James C. and Lee, Dongyoon and Servant, Francisco},
+  booktitle={2019 34th IEEE/ACM International Conference on Automated Software Engineering (ASE)}, 
+  title={Regexes are Hard: Decision-Making, Difficulties, and Risks in Programming Regular Expressions}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={415-426},
+  doi={10.1109/ASE.2019.00047}
+  }
+
+
+% esempio citazione articolo a congresso
 @inproceedings{psisec,
   author={Enrici,Ivan and Ancilli,Mario and Lioy,Antonio},
   title = {A psychological approach to information technology security},
