--- a/maietta.tex
+++ b/maietta.tex
@@ -49,7 +49,8 @@
 
 \input{commands.tex}
 \usepackage{dirtytalk}
-
+\usepackage{amsmath}
+\usepackage{fancyvrb}
 \begin{document}
 
 \ateneo{Politecnico di Torino}
@@ -168,8 +169,9 @@ Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente ril
 \input{capitoli/chapter3.tex}
 \label{chap:3}
 
-%\chapter{cap4}
-%\input{capitoli/Chapter2.tex}
+\chapter{Realizzazione dei prototipi}
+\input{capitoli/chapter4.tex}
+\label{chap:3}
 
 %\chapter{5}
 %\input{capitoli/5-design.tex}
@@ -189,7 +191,7 @@ Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente ril
 %\input{biblio.tex}
 
 % se la bibliografia è stata scritta (usando Bibtex) nel file biblio.bib allora commentare la riga precedente e scommentare le due righe seguenti
-\bibliographystyle{torsec}
+\bibliographystyle{plain} 
 \bibliography{biblio.bib}
 
 
