--- a/capitoli/chapter1.tex
+++ b/capitoli/chapter1.tex
@@ -31,14 +31,14 @@
 %IoT \cite{friis} basically refers to ....\\
 %\ac{IoT} basically refers to ....\\
 
-\section{Introduzione}
+%\section{Introduzione}
 L'avanzamento tecnologico delle telecomunicazioni negli ultimi decenni ha permesso alle persone di recuperare dati e informazioni provenienti dai luoghi più disparati e ad una velocità di approvvigionamento praticamente nulla: se prima di Internet l'unico modo di ricevere un documento ufficiale era farne richiesta all'ufficio competente, ora le documentazioni possono essere normalmente a disposizione in rete. Gli utenti della rete hanno a disposizione una mole così grande di documenti e informazioni che gli è praticamente impossibile visionare la totalità di questi dati.
 In questo contesto l'esigenza di estrarre dati da documenti è sempre più sentita, soprattutto quando si voglia fare una cernita dei documenti contenenti specifiche informazioni di proprio interesse.
 Questa tesi ha come scopo effettuare un'estrazione di dati da un insieme di documenti della pubblica amministrazione; più precisamente i documenti appartengono al contesto dei bandi pubblici e i dati da cercare sono tutte quelle informazioni che impongono dei requisiti ai possibili partecipanti di gara. 
 In questo contesto si provano approcci tecnologici diversi, nella fattispecie l'uso delle regular expressions e delle reti neurali; di entrambe le tecnologie si delineano punti di forza e svantaggi.
 
 
-\section{Contesto}
+%\section{Contesto}
 
 \subsection{Gare d'appalto} \label{sec:focus}
 Tra le funzioni di uno Stato vi sono la costruzione, la manutenzione e la messa in sicurezza delle infrastrutture di pubblica utilità, quali ad esempio gli edifici pubblici, le reti di telecomunicazione, le strade e gli ospedali di cui beneficiano i cittadini.
