--- a/capitoli/chapter3.tex
+++ b/capitoli/chapter3.tex
@@ -10,8 +10,8 @@
 
 
 
-\section{Impiego delle regular expression}
-\subsection{Difficoltà insite nelle regex}
+%\section{Impiego delle regular expression}
+%\subsection{Difficoltà insite nelle regex}
 Le espressioni regolari sono usatissime nel mondo della programmazione: 
 si stima che siano utilizzate in \say{più di un terzo dei progetti Python e Javascript} \cite{RegexesAreHard}.
 La loro grande diffusione non vuol dire però che costituiscano una tecnologia sicura da utilizzare, poiché presentano
