--- a/maietta.tex
+++ b/maietta.tex
@@ -161,15 +161,15 @@ Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente ril
 \label{chap:1}
 
 
-\chapter{Individuazione delle attestazioni SOA}
+\section{Casi d'uso delle attestazioni SOA}
 \input{capitoli/chapter2.tex}
 \label{chap:2}
 
-\chapter{Lavori correlati}
+\section{Impiego delle regular expression}
 \input{capitoli/chapter3.tex}
 \label{chap:3}
 
-\chapter{Realizzazione dei prototipi}
+\section{Realizzazione dei prototipi}
 \input{capitoli/chapter4.tex}
 \label{chap:3}
 
