cancella la dicitura di capitolo

--- a/capitoli/chapter1.tex
+++ b/capitoli/chapter1.tex
@@ -40,7 +40,7 @@ In questo contesto si provano approcci tecnologici diversi, nella fattispecie l'
 
 %\section{Contesto}
 
-\subsection{Gare d'appalto} \label{sec:focus}
+\section{Gare d'appalto} \label{sec:focus}
 Tra le funzioni di uno Stato vi sono la costruzione, la manutenzione e la messa in sicurezza delle infrastrutture di pubblica utilità, quali ad esempio gli edifici pubblici, le reti di telecomunicazione, le strade e gli ospedali di cui beneficiano i cittadini.
 La Pubblica Amministrazione, dovendo garantire una quantità così grande di infrastrutture, non esegue i lavori direttamente, ma ne delega l'attuazione pratica a delle imprese private con un appalto pubblico.
 L'appalto è un contratto con il quale una parte, detta parte appaltatrice, assume, 'con organizzazione dei mezzi necessari e con gestione a proprio rischio, l'obbligazione di compiere in favore di un'altra (committente o appaltante) un'opera o un servizio.'
@@ -50,14 +50,14 @@ l'impresa gestisca i lavori in maniera competitiva, senza comportare sprechi ing
 l'impresa riesca a reggere lo sforzo finanziario che l'opera comporta, sia per quanto riguarda l'approvvigionamento dei materiali, sia per quanto riguarda il costo del lavoro.
 L'assegnazione di un progetto si avvale di apposita gara d'appalto, che ha come obbiettivo la selezione dell'impresa che meglio possa soddisfare questi requisiti di competenze tecniche, finanziarie e di competitività sul mercato.
 
-\subsection{Identificativi di progetto e di gara}
+\section{Identificativi di progetto e di gara}
 Nell'ambito di una gara d'appalto, il progetto può essere composto da più parti singole chiamate lotti; l'assegnazione di un lotto è indipendente dagli altri, per cui diversi lotti di un progetto possono essere assegnati ad aziende differenti nell'ambito della stessa gara d'appalto.
 I documenti che andiamo ad analizzare riportano una serie di informazioni di nostro interesse, quali:
 - il Codice Unico di Progetto (CUP), che descrive univocamente il progetto d'investimento pubblico;  è un identificativo alfanumerico di quindici caratteri;
 - il Codice Identificativo di Gara (CIG), che indica in maniera univoca il lotto;
  è un identificativo alfanumerico di dieci caratteri;
 
-\subsection{Lavori e importi}
+\section{Lavori e importi}
 La gara d'appalto deve indicare in maniera evidente e inoppugnabile quali competenze tecniche e quali capacità finanziarie sono ritenute requisiti fondamentali per la partecipazione; qualsiasi ambiguità nei requisiti di una gara potrebbe dare adito a ricorsi e quindi a rallentare la gara stessa. 
 Il bisogno di requisiti oggettivi ha motivato l'introduzione di apposite certificazioni fornite dalle Società Organismi di Attestazione (SOA), che prendono il nome di "certificati SOA" o 'attestazioni SOA'.
 Tali attestazioni si dividono in due macrogruppi:
@@ -73,7 +73,7 @@ Un bando di gara esprimerà i requisiti di progetto sotto forma di categorie e cl
 
 
 
-\subsection{Tassonomia SOA}
+\section{Tassonomia SOA}
 Le Categorie sono suddivise in due macro-categorie: opere generali e opere specializzate,  rispettivamente identificate dagli acronimi OG e OS; sono individuate 13 categorie di Opere Generali e 39 categorie di Opere Specializzate.
 Le Classifiche d'importo, in numero di dieci, sono rese come numeri ordinali romani. 
 
