--- a/biblio.bib
+++ b/biblio.bib
@@ -39,6 +39,33 @@ doi = {10.1145/3338906.3342509}
   note={\url{https://softwareengineering.stackexchange.com/questions/223634/what-is-meant-by-now-you-have-two-problems}}
 }
 
+% esempio citazione pagina web di un progetto
+@misc{spacyThinc,
+  author={{ExplosionAI GmbH}},
+  note={\url{https://thinc.ai/docs/usage-frameworks}}
+}
+
+@book{machineLearningBook,
+author = {Flach, Peter},
+title = {Machine Learning: The Art and Science of Algorithms That Make Sense of Data},
+year = {2012},
+isbn = {1107422221},
+publisher = {Cambridge University Press},
+address = {USA},
+abstract = {As one of the most comprehensive machine learning texts around, this book does justice
+to the field's incredible richness, but without losing sight of the unifying principles.
+Peter Flach's clear, example-based approach begins by discussing how a spam filter
+works, which gives an immediate introduction to machine learning in action, with a
+minimum of technical fuss. Flach provides case studies of increasing complexity and
+variety with well-chosen examples and illustrations throughout. He covers a wide range
+of logical, geometric and statistical models and state-of-the-art topics such as matrix
+factorisation and ROC analysis. Particular attention is paid to the central role played
+by features. The use of established terminology is balanced with the introduction
+of new and useful concepts, and summaries of relevant background material are provided
+with pointers for revision if necessary. These features ensure Machine Learning will
+set a new standard as an introductory textbook.}
+}
+
 @inproceedings{HowToInvestMyTime,
 author = {Zhang, Shanshan and He, Lihong and Dragut, Eduard and Vucetic, Slobodan},
 title = {How to Invest My Time: Lessons from Human-in-the-Loop Entity Extraction},
