--- a/maietta.tex
+++ b/maietta.tex
@@ -178,7 +178,7 @@ Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente ril
 \chapter[Realizzazione dei prototipi][]{4. Realizzazione dei prototipi}
 \input{capitoli/chapter4.tex}
 
-\chapter[Tecniche di Machine Learning][]{5. Tecniche di Machine Learning}
+\chapter[Machine Learning][]{5. Machine Learning}
 \input{capitoli/chapter5.tex}
 
 %\section{6}
